--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation('com.google.code.gson:gson:2.8.6')
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
